--- a/flightmanagement/package.json
+++ b/flightmanagement/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/lodash.isempty": "^4.4.7",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.1.2",
     "lodash.isempty": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
     "react": "^18.2.0",
